# magictensors

./: README.md  requirements.txt  setup.cfg
magictensors/: core.py
