[metadata]
name = magictensors
version = 0.1.0
author = Guy Dar
author_email = guyd1995@gmail.com
description = Magical Tensors for debugging!!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guyd1995/magictensors
project_urls =
    Bug Tracker = https://github.com/guyd1995/magictensors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = magictensors
packages = find:
python_requires = >=3.6

[options.packages.find]
where = magictensors